fixed some layout issues on about page for mobile screens

--- a/css/about.style.css
+++ b/css/about.style.css
@@ -498,7 +498,7 @@ footer {
   }
 
   #brand-logo {
-   display: none;
+    display: none;
   }
 
   #hero-heading {
@@ -531,6 +531,7 @@ footer {
   .heading-2 {
     font-size: 2.4rem;
     letter-spacing: -0.18px;
+    margin-bottom: 1.5rem;
   }
 
   .stat-container {
